<resources>
    <!--************ Alerts strings ************-->
    <!--************ Alerts strings ************-->
    <!-- General Alerts -->
    <string name="accept_action">Aceptar</string>
    <string name="alert_title">Ha ocurrido un error</string>
    <!-- Different Passwords Alert -->
    <string name="different_passwords">Las contraseñas no coinciden</string>
    <!-- Sign Up Alert -->
    <string name="sign_up_alert">Se ha producido un error al registrarse</string>
    <!-- Log In Alert -->
    <string name="log_in_alert">Se ha producido un error autenticando el usuario</string>
    <!-- Log Out message -->
    <string name="log_out_message">Usted ha cerrado sesión</string>
    <!--************ Activity Strings ************-->
    <!-- Generic strings -->
    <string name="continue_action">Siguiente</string>
    <!-- Log In Activity -->
    <string name="app_name" translatable="false">Enrrolato</string>
    <string name="log_in_title">Iniciar sesión</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="reset_password">Recupérala</string>
    <string name="log_in_action">Ingresar</string>
    <string name="sign_up">¿No tienes una cuenta?\nCrea una</string>
    <!-- Sign Up Activity -->
    <string name="sign_up_title">Regístrate</string>
    <string name="new_password">Ingresa tu contraseña</string>
    <string name="repeat_password">Repite tu contraseña</string>
    <string name="help_sign_up">Si quieres continuar con Google o Facebook, no es necesario que realices con este registro.</string>
    <string name="sign_up_action">Registrarme</string>
    <string name="sign_up_message">Inicia sesión con tu nueva cuenta</string>
    <!-- About Us Fragment -->
    <string name="about_us">Acerca de</string>
    <string name="enrrolato_logo_description">Logo de Enrrolato</string>
    <string name="facebook_logo_description">Logo de Facebook</string>
    <string name="instagram_logo_description">Logo de Instagram</string>
    <string name="enrrolato_description">Cafetería, bowls saludables y heladería artesanal con helados de rollo a la plancha en Sarchí</string>
    <string name="phones_title">Teléfonos:</string>
    <string name="phones_value" translatable="false">8302-6566 / 8875-5945</string>
    <!-- Principal Menú -->
    <string name="create_ice_cream">Crear helado</string>
    <string name="show_menu">Ver menú</string>
    <!-- Profile Fragment -->
    <string name="account">Cuenta</string>
    <string name="email_text">Correo electrónico asociado</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="close_account">Eliminar cuenta y datos</string>
    <string name="log_out">Cerrar sesión</string>
    <!-- Reset Password -->
    <string name="reset_password_title">Recuperar contraseña</string>
    <string name="reset_password_info">Ingrese el correo electrónico asociado a la cuenta</string>
    <string name="reset_password_action">Recuperar contraseña</string>
    <string name="reset_password_tip">Recibirá un correo a está dirección con las instrucciones.</string>
    <string name="reset_password_success">Se envió el correo correctamente</string>
...
    <!-- Default Flavors Fragment -->
    <string name="default_flavor_title">Selección de helado</string>
    <string name="preset_flavor_label">Especiales</string>
    <string name="preset_flavor_list">Elija sabor especial</string>
    <string name="season_flavor_label">Temporada</string>
    <string name="season_flavor_list">Elija sabor de temporada</string>
    <string name="custom_icecream">Crear helado personalizado</string>
    <string name="no_preset">Debe seleccionar un helado</string>
    <string name="predefined_select_warn">Usted ha elegido un especial o temporada, ¿Quiere comenzar uno personalizado?</string>
    <!-- Flavors Fragment -->
    <string name="flavor_title">Sabores personalizados</string>
    <string name="flavor_list">Lista de sabores</string>
    <string name="flavor_selector">Mostrar sabores disponibles</string>
    <string name="regular_flavor">Tradicional</string>
    <string name="liquor_flavor">Licor</string>
    <string name="no_flavor">No se han seleccionado sabores</string>
    <string name="delete_flavor_prompt">¿Desea eliminar el sabor?</string>
    <string name="duplicated_flavor">Ya seleccionó este sabor</string>
    <string name="max_flavor">Usted excedió el máximo de sabores</string>
    <!-- Filling Fragment -->
...
    <string name="filling_selector">Mostrar jarabes disponibles</string>
    <string name="no_filling">Debe seleccionar un jarabe</string>
    <string name="duplicated_filling">Ya seleccionó este relleno</string>
    <string name="max_filling">Usted excedió el máximo de rellenos</string>
    <!-- Toppings Fragment -->
    <string name="topping_title">Selección de topping</string>
    <string name="topping_list">Lista de toppings</string>
    <string name="topping_selector">Mostrar toppings disponibles</string>
    <string name="topping_alert">* Topping extra tiene un valor de 400 colones</string>
    <string name="no_topping">Debe seleccionar algún topping</string>
    <string name="delete_topping_prompt">¿Desea eliminar el topping?</string>
    <string name="duplicated_topping">Ya seleccionó este topping</string>
    <string name="max_topping">Usted excedió el máximo de toppings</string>
    <!-- Container Fragment -->
    <string name="container_title">Escogencia de envases</string>
...

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Texto de ejemplo</string>
    <string name="username">Nombre de usuario</string>
    <string name="home">Inicio</string>
    <string name="cart">Carrito</string>
    <string name="profile">Cuenta</string>
    <string name="flavor_menu">Menú de sabores</string>
    <string name="traditional_flavor">Sabores tradicionales</string>
    <string name="liqueur_flavor">Sabores con licor</string>
    <string name="special_flavor">Sabores especiales</string>
    <string name="menu">Menú</string>
    <string name="show_flavors">Mostrar sabores</string>
...
