...
    android:background="@color/cyan"
    android:orientation="vertical"
    tools:context=".createIceCream.ToppingFragment"
    android:id="@+id/ly_topping">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollviewTopping"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:paddingBottom="30dp"
        tools:layout_editor_absoluteX="57dp">

...
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spTopping"
                style="@style/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="32dp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtToppings" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/choosenTopping"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
...
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spTopping" />

            <TextView
                android:id="@+id/txtToppingAlert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="64dp"
                android:layout_marginTop="10dp"
                android:text="@string/topping_alert"
                android:visibility="invisible"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/choosenTopping"/>

            <Button
                android:id="@+id/btCotinueToContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/round_shape"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
...
